--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -2,29 +2,21 @@ $primary-bg-color: #A473E5;
 $font-color: #333333;
 
 $--colors: (
-  "primary": (
-    "base": #A473E5,
+  "primary": ("base": #A473E5,
   ),
-  "success": (
-    "base": #21ba45,
+  "success": ("base": #21ba45,
   ),
-  "warning": (
-    "base": #f2711c,
+  "warning": ("base": #f2711c,
   ),
-  "danger": (
-    "base": #db2828,
+  "danger": ("base": #db2828,
   ),
-  "error": (
-    "base": #db2828,
+  "error": ("base": #db2828,
   ),
-  "info": (
-    "base": #A473E5,
+  "info": ("base": #A473E5,
   ),
 );
 
-@forward "element-plus/theme-chalk/src/common/var.scss" with (
-  $colors: $--colors
-);
+@forward "element-plus/theme-chalk/src/common/var.scss" with ($colors: $--colors);
 
 @use "element-plus/theme-chalk/src/index.scss" as *;
 
@@ -48,6 +40,7 @@ a {
   color: $font-color;
   font-size: 14px;
 }
+
 ul {
   list-style-type: none;
 }
@@ -55,4 +48,58 @@ ul {
 .spinner {
   display: none;
   opacity: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 10px 14px;
+  box-sizing: border-box;
+
+  .tools {
+    margin: 10px 0;
+  }
+
+  .table {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin-top: 20px;
+    background-color: #ffffff;
+  }
+
+  .pagination {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 15px 0;
+  }
+}
+
+.el-tooltip__trigger {
+  outline: none;
+}
+
+.waring {
+  color: var(--el-color-warning) !important;
+
+  &:focus {
+    background-color: transparent !important;
+  }
+
+  &:hover {
+    background-color: transparent !important;
+  }
+}
+.delete {
+  color: var(--el-color-danger) !important;
+
+  &:focus {
+    background-color: transparent !important;
+  }
+
+  &:hover {
+    background-color: transparent !important;
+  }
 }
