--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -62,11 +62,38 @@ ul {
   }
 
   .table {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
     margin-top: 20px;
     background-color: #ffffff;
+    padding: 20px;
+    border-radius: 14px;
+    z-index: 1;
+
+    .el-table, tr, th {
+      background-color: transparent;
+    }
+
+    .el-table {
+      z-index: 1;
+    }
+
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   right: 0;
+    //   bottom: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   background-color: #ffffff;
+    //   border-radius: 14px;
+    //   z-index: 0;
+    //   backdrop-filter: blur(20px);
+    // }
   }
 
   .pagination {
