--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,22 +1,22 @@
 $primary-bg-color: #A473E5;
 $font-color: #333333;
 
-$--colors: (
-  "primary": ("base": #A473E5,
-  ),
-  "success": ("base": #21ba45,
-  ),
-  "warning": ("base": #f2711c,
-  ),
-  "danger": ("base": #db2828,
-  ),
-  "error": ("base": #db2828,
-  ),
-  "info": ("base": #909399,
-  ),
-);
+// $--colors: (
+//   "primary": ("base": #A473E5,
+//   ),
+//   "success": ("base": #21ba45,
+//   ),
+//   "warning": ("base": #f2711c,
+//   ),
+//   "danger": ("base": #db2828,
+//   ),
+//   "error": ("base": #db2828,
+//   ),
+//   "info": ("base": #909399,
+//   ),
+// );
 
-@forward "element-plus/theme-chalk/src/common/var.scss" with ($colors: $--colors);
+// @forward "element-plus/theme-chalk/src/common/var.scss" with ($colors: $--colors);
 
 @use "element-plus/theme-chalk/src/index.scss" as *;
 
@@ -65,10 +65,9 @@ ul {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 100%;
     margin-top: 20px;
     background-color: #ffffff;
-    padding: 20px;
+    padding: 0 20px 10px;
     border-radius: 14px;
     z-index: 1;
 
