--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,22 +1,22 @@
 $primary-bg-color: #A473E5;
 $font-color: #333333;
 
-// $--colors: (
-//   "primary": ("base": #A473E5,
-//   ),
-//   "success": ("base": #21ba45,
-//   ),
-//   "warning": ("base": #f2711c,
-//   ),
-//   "danger": ("base": #db2828,
-//   ),
-//   "error": ("base": #db2828,
-//   ),
-//   "info": ("base": #909399,
-//   ),
-// );
+$--colors: (
+  "primary": ("base": #A473E5,
+  ),
+  "success": ("base": #21ba45,
+  ),
+  "warning": ("base": #f2711c,
+  ),
+  "danger": ("base": #db2828,
+  ),
+  "error": ("base": #db2828,
+  ),
+  "info": ("base": #909399,
+  ),
+);
 
-// @forward "element-plus/theme-chalk/src/common/var.scss" with ($colors: $--colors);
+@forward "element-plus/theme-chalk/src/common/var.scss" with ($colors: $--colors);
 
 @use "element-plus/theme-chalk/src/index.scss" as *;
 
